# QtMessengerClient

./: CMakeLists.txt  main.cpp
Utilities/: AbstractRequest.cpp  AbstractRequest.hpp
Utilities/Request/: AbstractRequest.cpp  AbstractRequest.hpp  AuthorizationRequest.cpp  AuthorizationRequest.hpp
